# gelek

./: CMakeLists.txt  README.md  about.qml.in  manifest.json.in
app/: ImportPage.qml  Main.qml  gelek.desktop.in  historyLevel9.qml  playLevel9.qml  savedGamesPage.qml  storiesLevel9Index.qml
app/components/: ColumnCommands.qml  GelekHeader.qml  GelekItemLayout.qml  LevelLabel.qml  LevelText.qml  ListItemNovellaHeader.qml  NovellaItem.qml  NovellaListItem.qml  NovellaListItemDiary.qml  ParagraphText.qml  StorySection.qml
app/level9gamesstories/: storyLevel9GRGnome.qml  storyLevel9GRIngrid.qml  storyLevel9GRNovella.qml  storyLevel9IBNovella.qml  storyLevel9JDAdventure.qml  storyLevel9JDColossal.qml  storyLevel9JDDungeon.qml  storyLevel9JDNovella.qml  storyLevel9SDNovella.qml  storyLevel9SDReturnEden.qml  storyLevel9SDSnowball.qml  storyLevel9SDWormParadise.qml  storyLevel9SSArchers.qml  storyLevel9SSEmerald.qml  storyLevel9SSGrowingPainMole.qml  storyLevel9SSLancelot.qml  storyLevel9SSScapeGhost.qml  storyLevel9SSSecreMole.qml  storyLevel9TMLordsTime.qml  storyLevel9TMNovella.qml  storyLevel9TMPrice.qml  storyLevel9TMRedMoon.qml
app/tests/autopilot/: run
app/tests/autopilot/RunQProcess/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/RunQProcess/: backend.cpp  backend.h  mytype.cpp  mytype.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
lib/: lev9  level9  level9glk  level9glkterm
material/: Main-plain.qml  Snowball-versions.txt  edenSong.htm  info-SiliconDreams  l9str-sd.xcf
material/qml-intent-saveToGame/: playLevel9.qml  savedGamesPage.qml
po/: gelek.cibersheep.pot
terps/: lev9glk
